--- a/ProgramAPI/ProgramAPI/ProgramAPI.csproj
+++ b/ProgramAPI/ProgramAPI/ProgramAPI.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ProgramDatabase\ProgramDatabase.csproj" />
+    <ProjectReference Include="..\ProgramService\ProgramService.csproj" />
   </ItemGroup>
 
 </Project>
